[package]
name = "tracer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
pnet = "0.34.0"
socket2 = { version = "0.5.5", features = ["all"] }
anyhow = "1.0.75"
dns-lookup = "2.0.4"